<resources>
    <string name="app_name">神奇海螺</string>
    <string name="search_text" />

    <string name="cd">TODO</string>
    <string name="action_settings">Settings</string>
    <string name="firstPage_name">事务</string>
    <string name="enter_title">点击输入标题</string>
    <string name="enter_affair">点击输入详情</string>
    <string name="enter_deadline">点击输入截止日期</string>
    <string name="enter_location">点击右侧图标选择地址</string>
    <string name="delete">点击上方图标清空信息</string>

    <string name="title">标题</string>
    <string name="affair">详情</string>
    <string name="deadline">截止日期</string>
    <string name="location">地址</string>
</resources>
